# archadeptcli

./: .gitignore  README.md  pyproject.toml
archadeptcli/: __main__.py  diagram.py  docker.py  exceptions.py
archadeptcli/static/: instructions.json
tools/: Dockerfile  build-docker-image.sh  parse-arm-xml
