[tool.poetry]
name = "archadeptcli"
version = "1.2.2"
description = "Command line interface for building, running, debugging, and disassembling the ArchAdept training course example projects."
authors = ["Ash Wilding <ash@archadept.com>"]
homepage = "https://archadept.com/"
repository = "https://github.com/archadept/archadeptcli"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.7.0"
bs4 = "^0.0.2"
pillow = "^10.2.0"
lxml = "^5.1.0"
fuzzywuzzy = "^0.18.0"
levenshtein = "^0.25.0"

[tool.poetry.scripts]
archadept = "archadeptcli.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

